implemented profile information and password update and delete account

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 nav {
+  /* position: relative; */
   background-color: #230052;
   padding: 0px 50px;
   /* height: 70px; */
@@ -10,14 +11,14 @@ nav div {
 }
 
 .active {
-  font-weight: bold;  /* Makes active link bold */
-  color: yellow !important;     /* Change color of active link */
+  font-weight: bold; /* Makes active link bold */
+  color: yellow !important; /* Change color of active link */
 }
 
 .logo {
   padding-top: 0px;
 }
-    
+
 .logo h1 {
   color: white;
   cursor: pointer;
@@ -40,6 +41,57 @@ nav div {
 .list li a:hover {
   color: yellow;
   transition: all 0.3 ease-in-out;
+}
+
+.dropdown {
+  color: white;
+}
+
+.dropdown:hover {
+  color: yellow;
+  transition: all 0.3 ease-in-out;
+  cursor: pointer;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.dropdown-menu {
+  position: absolute;
+  right: 10;
+  background-color: white;
+  padding: 5px 0px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown-menu li {
+  height: 50px;
+  color: #230052;
+}
+
+.dropdown-menu a li {
+  /* height: 50px;
+  width: 100%;
+  color: #230052;
+  padding: 10px; */
+
+  height: 50px;
+  color: #230052;
+}
+
+.dropdown-menu li:hover {
+  background-color: #230052;
+  width: 100%;
+  color: yellow;
+  cursor: pointer;
+}
+
+.dropdown-menu a li:hover {
+  background-color: #230052;
+  color: yellow;
 }
 
 hr {
