added logo and made quality of life changes in the code

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,9 +19,9 @@ nav div {
   padding-top: 0px;
 }
 
-.logo h1 {
-  color: white;
-  cursor: pointer;
+.logo img {
+  width: 50px;
+  margin-top: 20px;
 }
 
 /* .list {
