added a responsive mobile navbar

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -9,3 +9,10 @@ footer p {
     text-align: center;
     padding-top: 5px;
 }
+
+@media screen and (max-width: 410px) {
+  /* Styles to apply when the screen width is 768px or less */
+  footer {
+    height: 70px;
+  }
+}
