--- a/src/pages/Dashboard/Profile/components/DeleteAccount/DeleteAccount.module.css
+++ b/src/pages/Dashboard/Profile/components/DeleteAccount/DeleteAccount.module.css
@@ -1,3 +1,8 @@
 .btn {
-    background-color: red !important;
+  background-color: red !important;
+  border: red !important;
+}
+
+.btn:hover {
+  background-color: darkred !important;
 }
