confirm password and footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,12 +5,14 @@ footer {
 }
 
 footer p {
-    color: white;
-    text-align: center;
-    padding-top: 5px;
+  color: white;
+  text-align: center;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 483px) {
   /* Styles to apply when the screen width is 768px or less */
   footer {
     height: 70px;
