commented css code

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
 }
 
-.loading-spinner {
+/* .loading-spinner {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -15,4 +15,4 @@
   color: white;
   padding: 10px 20px;
   border-radius: 8px;
-}
+} */
